--- a/Classes/teste_from.ipynb
+++ b/Classes/teste_from.ipynb
@@ -35,29 +35,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "5276c886",
+   "execution_count": 5,
+   "id": "f0afc9b2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "12"
+       "<bound method Documento.__str__ of <documento.Documento object at 0x7fde7d1f7fe0>>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "tres_jogador.numero_jogadores"
+    "from documento import Documento\n",
+    "\n",
+    "arquivo = Documento(23, 13, \"lorem\")\n",
+    "\n",
+    "arquivo.__str__"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6b33293",
+   "id": "b11ae646",
    "metadata": {},
    "outputs": [],
    "source": []
