--- a/pratica/produto/teste_from.ipynb
+++ b/pratica/produto/teste_from.ipynb
@@ -11,16 +11,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "id": "596ebc4a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neste momento, há 12 Jogadores conectados.\n"
-     ]
+     "data": {
+      "text/plain": [
+       "<bound method Jogador.sair of <jogador.Jogador object at 0x7e7a641044d0>>"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -30,7 +33,7 @@
     "dois_jogador = Jogador(\"Jão Gabriel\")\n",
     "tres_jogador = Jogador(\"Willian\")\n",
     "\n",
-    "um_jogador.imprimir_quantidade_jogadores()"
+    "um_jogador.sair"
    ]
   },
   {
@@ -57,14 +60,6 @@
     "\n",
     "arquivo.__str__"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b11ae646",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
