--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -45,8 +45,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "fc1800d8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Fucionario(ABC):\n",
+    "    def __init__(self, nome: str, salario: float) -> None:\n",
+    "        self._nome = nome\n",
+    "        self._salario = salario\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = f\"Nome: {self._nome}\\n\"\n",
+    "        return resultado\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def calcular_salario(self) -> float:\n",
+    "        pass\n",
+    "    \n",
+    "    @property\n",
+    "    def nome(self) -> str:\n",
+    "        return self._nome\n",
+    "    \n",
+    "    @nome.setter\n",
+    "    def nome(self, nome: str) -> None:\n",
+    "        self._nome = nome\n",
+    "\n",
+    "#>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>>\n",
+    "\n",
+    "class FucionarioCLT(Fucionario):\n",
+    "    \n",
+    "    def calcular_salario(self) -> float:\n",
+    "        return self._salario * 1.1\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = super().__str__() + \"\\n\"\n",
+    "        resultado += f\"Salario: {self.calcular_salario():.2f}\"\n",
+    "        return resultado\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4bf58890",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Guilherme\n",
+      "\n",
+      "Salario: 1650.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "pessoasCLT = FucionarioCLT(\"Guilherme\", 1500)\n",
+    "print(pessoasCLT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0ef600d",
    "metadata": {},
    "outputs": [],
    "source": []
