classes sobre Veiculos

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "fc1800d8",
    "metadata": {},
    "outputs": [],
@@ -83,12 +83,22 @@
     "    def __str__(self) -> str:\n",
     "        resultado = super().__str__() + \"\\n\"\n",
     "        resultado += f\"Salario: {self.calcular_salario():.2f}\"\n",
-    "        return resultado\n"
+    "        return resultado\n",
+    "\n",
+    "class FucionarioPJ(Fucionario):\n",
+    "\n",
+    "    def calcular_salario(self) -> float:\n",
+    "        return self._salario * 1\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = super().__str__() + \"\\n\"\n",
+    "        resultado += f\"Salario PJ: {self.calcular_salario()}\"\n",
+    "        return resultado"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "id": "4bf58890",
    "metadata": {},
    "outputs": [
@@ -98,19 +108,97 @@
      "text": [
       "Nome: Guilherme\n",
       "\n",
-      "Salario: 1650.00\n"
+      "Salario: 1650.00\n",
+      "Nome: Mateus\n",
+      "\n",
+      "Salario PJ: 1500\n"
      ]
     }
    ],
    "source": [
     "pessoasCLT = FucionarioCLT(\"Guilherme\", 1500)\n",
-    "print(pessoasCLT)"
+    "print(pessoasCLT)\n",
+    "\n",
+    "pessoasPJ = FucionarioPJ(\"Mateus\", 1500)\n",
+    "print(pessoasPJ)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "13e83c23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#exercicio sobre veiculos\n",
+    "class Veiculo:\n",
+    "    def __init__(self, marca: str, velocidade: int) -> None:\n",
+    "        self._marca = marca\n",
+    "        self._velocidade = velocidade\n",
+    "\n",
+    "    def acelerar(self) -> int:\n",
+    "        self._velocidade += 10\n",
+    "        return self._velocidade\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = f\"Marca: {self._marca}\\n\"\n",
+    "        resultado += f\"Velocidade: {self.acelerar()}Km/h\"\n",
+    "        return resultado\n",
+    "\n",
+    "class Carro(Veiculo):\n",
+    "\n",
+    "    def acelerar(self) -> None:\n",
+    "        self._velocidade += 20\n",
+    "        return self._velocidade\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = super().__str__()\n",
+    "        return resultado\n",
+    "\n",
+    "class Moto(Veiculo):\n",
+    "\n",
+    "    def acelerar(self) -> None:\n",
+    "        self._velocidade += 30\n",
+    "        return self._velocidade\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = super().__str__()\n",
+    "        return resultado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9a2b7054",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Marca: Estrada\n",
+      "Velocidade: 100Km/h\n",
+      "--------------------\n",
+      "Marca: Honda\n",
+      "Velocidade: 110Km/h\n",
+      "--------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "veiculos = [Carro(\"Estrada\", 40), Moto(\"Honda\", 20)]\n",
+    "\n",
+    "for v in veiculos:\n",
+    "    v.acelerar()\n",
+    "    v.acelerar()\n",
+    "    print(v)\n",
+    "    print(\"-\" * 20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0ef600d",
+   "id": "3eb37b52",
    "metadata": {},
    "outputs": [],
    "source": []
