Pratica: herança, polimorfismo, emcapsulamento,  classe abstrada

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -196,12 +196,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "85bc1c09",
+   "metadata": {},
+   "source": [
+    "# 🧩 Exercício – Sistema de Conta Bancária (Python POO)\n",
+    "\n",
+    "## 🎯 Objetivo\n",
+    "Criar um sistema simples de **contas bancárias**, utilizando os conceitos de:\n",
+    "- Classes\n",
+    "- Encapsulamento\n",
+    "- `@property` e `@setter`\n",
+    "- Herança\n",
+    "- Polimorfismo\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🔹 Requisitos\n",
+    "\n",
+    "### 1️⃣ Classe `Conta`\n",
+    "Crie uma classe base chamada `Conta` com:\n",
+    "\n",
+    "#### Atributos (protegidos)\n",
+    "- `_titular` → nome do dono da conta\n",
+    "- `_saldo` → saldo da conta (inicia com 0 ou valor informado)\n",
+    "\n",
+    "#### Métodos\n",
+    "- `depositar(valor)`\n",
+    "  - Só permite valores maiores que zero\n",
+    "- `sacar(valor)`\n",
+    "  - Não permite saque maior que o saldo\n",
+    "  - Deve aplicar automaticamente a taxa da conta\n",
+    "- `calcular_taxa()`\n",
+    "  - Método que será sobrescrito nas classes filhas\n",
+    "- `saldo`\n",
+    "  - Property apenas para leitura (não pode alterar diretamente)\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 2️⃣ Classe `ContaCorrente`\n",
+    "Herda de `Conta` e:\n",
+    "- Cobra uma taxa fixa de **R$5** por saque\n",
+    "- Sobrescreve o método `calcular_taxa()`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 3️⃣ Classe `ContaPoupanca`\n",
+    "Herda de `Conta` e:\n",
+    "- **Não cobra taxa**\n",
+    "- Sobrescreve o método `calcular_taxa()`\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 4️⃣ Polimorfismo\n",
+    "O método `sacar()` deve funcionar de forma diferente dependendo do tipo da conta:\n",
+    "- `ContaCorrente` aplica taxa\n",
+    "- `ContaPoupanca` não aplica taxa\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## 🧪 Teste esperado (exemplo)\n",
+    "\n",
+    "```python\n",
+    "cc = ContaCorrente(\"Gui\", 100)\n",
+    "cp = ContaPoupanca(\"Ana\", 100)\n",
+    "\n",
+    "cc.sacar(50)\n",
+    "cp.sacar(50)\n",
+    "\n",
+    "print(cc.saldo)\n",
+    "print(cp.saldo)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "3eb37b52",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "class Conta(ABC):\n",
+    "    def __init__(self, titula: str) -> None:\n",
+    "        self._titula = titula\n",
+    "        self._saldo = 0\n",
+    "\n",
+    "    def despositar_valores(self, valor: float) -> None:\n",
+    "        if (valor > 0):\n",
+    "            self._saldo += valor\n",
+    "        else:\n",
+    "            print(\"Error... O valor deve ser Maior que zero\")\n",
+    "\n",
+    "    def sacar(self, valor: float) -> None:\n",
+    "        if (valor < 0):\n",
+    "            print(\"Error... Valor Invalido!\")\n",
+    "        elif (valor > self._saldo):\n",
+    "            print(\"Erro... Saldo insuficiente\")\n",
+    "        else:\n",
+    "            self._saldo -= valor\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def calcular_taxa(self) -> None:\n",
+    "        pass\n",
+    "\n",
+    "    @property\n",
+    "    def saldo(self) -> float:\n",
+    "        return self._saldo\n",
+    "    \n",
+    "#<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n",
+    "\n",
+    "class ContaCorrente(Conta):\n",
+    "\n",
+    "    def sacar(self, valor: float) -> None:\n",
+    "        if (valor > self._saldo or valor < 0):\n",
+    "            print(\"Erro... Saldo insuficiente!\")\n",
+    "        else:\n",
+    "            self._saldo -= valor\n",
+    "            self.calcular_taxa()\n",
+    "\n",
+    "\n",
+    "    def calcular_taxa(self) -> None:\n",
+    "        self._saldo -= 5.00\n",
+    "\n",
+    "#<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n",
+    "\n",
+    "class ContaPoupança(Conta):\n",
+    "\n",
+    "    def calcular_taxa(self) -> None:\n",
+    "        self._saldo *= 1.01\n",
+    "\n",
+    "\n",
+    "#<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<<\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "f09c1427",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc = ContaCorrente(\"Guilherme\")\n",
+    "cc.despositar_valores(100)\n",
+    "\n",
+    "\n",
+    "cp = ContaPoupança(\"Ana\")\n",
+    "cp.despositar_valores(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "99ab0b08",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cc.sacar(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "d40fa877",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45.0"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cc.saldo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "f5082675",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cp.sacar(50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "37f4faae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cp.saldo"
+   ]
   }
  ],
  "metadata": {
