--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "3eb37b52",
    "metadata": {},
    "outputs": [],
@@ -405,6 +405,114 @@
    ],
    "source": [
     "cp.saldo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2f77ec77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abs__',\n",
+       " '__add__',\n",
+       " '__and__',\n",
+       " '__bool__',\n",
+       " '__ceil__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dir__',\n",
+       " '__divmod__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__float__',\n",
+       " '__floor__',\n",
+       " '__floordiv__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getnewargs__',\n",
+       " '__getstate__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__index__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__int__',\n",
+       " '__invert__',\n",
+       " '__le__',\n",
+       " '__lshift__',\n",
+       " '__lt__',\n",
+       " '__mod__',\n",
+       " '__mul__',\n",
+       " '__ne__',\n",
+       " '__neg__',\n",
+       " '__new__',\n",
+       " '__or__',\n",
+       " '__pos__',\n",
+       " '__pow__',\n",
+       " '__radd__',\n",
+       " '__rand__',\n",
+       " '__rdivmod__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__rfloordiv__',\n",
+       " '__rlshift__',\n",
+       " '__rmod__',\n",
+       " '__rmul__',\n",
+       " '__ror__',\n",
+       " '__round__',\n",
+       " '__rpow__',\n",
+       " '__rrshift__',\n",
+       " '__rshift__',\n",
+       " '__rsub__',\n",
+       " '__rtruediv__',\n",
+       " '__rxor__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__sub__',\n",
+       " '__subclasshook__',\n",
+       " '__truediv__',\n",
+       " '__trunc__',\n",
+       " '__xor__',\n",
+       " 'as_integer_ratio',\n",
+       " 'bit_count',\n",
+       " 'bit_length',\n",
+       " 'conjugate',\n",
+       " 'denominator',\n",
+       " 'from_bytes',\n",
+       " 'imag',\n",
+       " 'is_integer',\n",
+       " 'numerator',\n",
+       " 'real',\n",
+       " 'to_bytes']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "dir(int) \n",
+    "# todos os metodos magicos de classe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73678c00",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Suas classes devem ter uma apenas, e não mais que uma responsabilidade!\n",
+    "# o melhor a se fazer é decompor em classes menores, cada uma focano em apenas uma resoluçao\n",
+    "# isso ajudara a fazer reparos futuros\n"
    ]
   }
  ],
