Sobre o dunder __getitem__()

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -510,10 +510,81 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Suas classes devem ter uma apenas, e não mais que uma responsabilidade!\n",
+    "# Suas classes devem ter apenas uma responsabilidade, e não mais que uma responsabilidade!\n",
     "# o melhor a se fazer é decompor em classes menores, cada uma focano em apenas uma resoluçao\n",
-    "# isso ajudara a fazer reparos futuros\n"
+    "# isso ajudara a fazer reparos futuros\n",
+    "# encapsulamento é verificaçao\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0a4f4461",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guilherme\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# usando o dunder __getitem__() em Listar\n",
+    "# tambem posso colocar o encapsulamento\n",
+    "# Uma verificão.\n",
+    "class Pessoa:\n",
+    "    def __init__(self, nome: str, idade: int) -> None:\n",
+    "        self._dado = [nome, idade]\n",
+    "\n",
+    "    def __getitem__(self, indice: int) -> str | int:\n",
+    "        return self._dado[indice]\n",
+    "\n",
+    "cidadao = Pessoa(\"Guilherme\", 20)\n",
+    "print(cidadao[0])\n",
+    "print(cidadao[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "382f00b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Estrada\n",
+      "12.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# usando o dunder getitem com dicionario\n",
+    "from typing import Union\n",
+    "\n",
+    "class Carro:\n",
+    "    def __init__(self, nome: str, preço: float) -> None:\n",
+    "         self._dado = {\"nome\": nome, \"preço\": preço}\n",
+    "\n",
+    "    def __getitem__(self, chave: str) -> Union[str, float]:\n",
+    "         return self._dado[chave]\n",
+    "\n",
+    "cidadao = Carro(\"Estrada\", 12.50)\n",
+    "print(cidadao[\"nome\"])\n",
+    "print(cidadao[\"preço\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e5197a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
