Estudo sobre composiçao, herança e o principio da responsabilidade unica

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -584,7 +584,79 @@
    "id": "8e5197a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# exercicio\n",
+    "class Contado:\n",
+    "    def __init__(self, nome: str, telefone: int) -> None:\n",
+    "        self._nome = nome\n",
+    "        self._telefone = telefone        \n",
+    "    \n",
+    "    @property\n",
+    "    def nome(self) -> str:\n",
+    "        return self._nome\n",
+    "    \n",
+    "    @property\n",
+    "    def telefone(self) -> int:\n",
+    "        return self._telefone\n",
+    "    \n",
+    "class RepositorioContatos:\n",
+    "    def __init__(self, nome: str, telefone: int) -> None:\n",
+    "        self._lista = [nome, telefone]\n",
+    "    \n",
+    "    @property\n",
+    "    def lista(self) -> list:\n",
+    "        return self._lista\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a912e2fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teste = Contado(\"Guilherme\", 86981955123)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a65b6e97",
+   "metadata": {},
+   "source": [
+    "- Quando Usar Herança em Classes\n",
+    "1. _Quando todos tem a mesma resposabilidade_\n",
+    "2. _so muda o resultado de cada classe filhos_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "dc0752f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Funcionario:\n",
+    "    def calcular_salario(self):\n",
+    "        pass\n",
+    "\n",
+    "class FuncionarioCLT(Funcionario):\n",
+    "    def calcular_salario(self):\n",
+    "        return \"salário CLT\"\n",
+    "\n",
+    "class FuncionarioPJ(Funcionario):\n",
+    "    def calcular_salario(self):\n",
+    "        return \"salário PJ\"\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5db52d96",
+   "metadata": {},
+   "source": [
+    "- Quado usar Composiçao em Classes\n",
+    "1. quando voce quiser distribuir resposabilidade unica para cada Classe"
+   ]
   }
  ],
  "metadata": {
