exercicio continuaçao composiçao

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -657,6 +657,114 @@
     "- Quado usar Composiçao em Classes\n",
     "1. quando voce quiser distribuir resposabilidade unica para cada Classe"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94a0f9b6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Contato:\n",
+    "    def __init__(self, nome: str, telefone: int) -> None:\n",
+    "        self._nome = nome\n",
+    "        self._telefone = telefone\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        resultado = f\"Nome: {self._nome}, Telefone: {self._telefone}\"\n",
+    "        return resultado\n",
+    "\n",
+    "    @property\n",
+    "    def nome(self) -> str:\n",
+    "        return self._nome\n",
+    "    \n",
+    "    @property\n",
+    "    def telefone(self) -> int:\n",
+    "        return self._telefone\n",
+    "\n",
+    "    @nome.setter\n",
+    "    def nome(self, nome: str) -> None:\n",
+    "        self._nome = nome\n",
+    "    \n",
+    "class RepositorioContatos:\n",
+    "    def __init__(self) -> None:\n",
+    "        self._lista_contatos = []\n",
+    "    \n",
+    "    def incluir(self, valor: str) -> None:\n",
+    "        self._lista_contatos.append(valor)\n",
+    "    \n",
+    "    def alterar(self, valor: str) -> None:\n",
+    "        if (valor in self._lista_contatos):\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "65b31431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: , Telefone: \n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "pessoa = Contato(\"\", \"\")\n",
+    "print(pessoa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "5bb501c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Guilherme, Telefone: (86)98195-5123\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pessoa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "d8097117",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista = []\n",
+    "if lista:\n",
+    "    print(\"verdadeiro\")\n",
+    "else:\n",
+    "    print(\"false\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d7480309",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
