new metodos in class repositorio contato

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "94a0f9b6",
    "metadata": {},
    "outputs": [],
@@ -693,78 +693,85 @@
     "    def incluir(self, valor: str) -> None:\n",
     "        self._lista_contatos.append(valor)\n",
     "    \n",
-    "    def alterar(self, valor: str) -> None:\n",
+    "    def alterar(self, valor: str, novo: str) -> None:\n",
     "        if (valor in self._lista_contatos):\n",
+    "            indice = self._lista_contatos.index(valor)\n",
+    "            self._lista_contatos[indice] = novo\n",
+    "\n",
+    "    def excluir(self, indice: int) -> None:\n",
+    "        if (indice > len(self._lista_contatos) - 1):\n",
+    "            print(f\"Coloque um indice de 0 a {len(self._lista_contatos) - 1}\")\n",
+    "        else:\n",
+    "            self._lista_contatos.pop(indice)\n",
+    "    \n",
+    "    def __getitem__(self, indice: int) -> list:\n",
+    "        if (indice > len(self._lista_contatos) - 1):\n",
+    "            print(f\"para a consulta, digite de 0 a {len(self._lista_contatos) - 1}\")\n",
+    "        else:\n",
+    "            return self._lista_contatos[indice]\n",
+    "\n",
+    "    @property\n",
+    "    def lista(self) -> list:\n",
+    "        return self._lista_contatos\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "65b31431",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nome: , Telefone: \n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "pessoa = Contato(\"\", \"\")\n",
-    "print(pessoa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "5bb501c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Nome: Guilherme, Telefone: (86)98195-5123\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(pessoa)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "d8097117",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "false\n"
-     ]
-    }
-   ],
-   "source": [
-    "lista = []\n",
-    "if lista:\n",
-    "    print(\"verdadeiro\")\n",
-    "else:\n",
-    "    print(\"false\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "d7480309",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = [\n",
+    "Contato(\"Guilherme\", 81955123),\n",
+    "Contato(\"Klecius\",  87651234),\n",
+    "Contato(\"Franciene\", 81261251),\n",
+    "Contato(\"Kleciane\",  83616171)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f8e129b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadastrar = RepositorioContatos()\n",
+    "for pessoa in lista:\n",
+    "    cadastrar.incluir(pessoa)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9b73cd30",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cadastrar.excluir(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "1199870c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Guilherme, Telefone: 81955123\n",
+      "Nome: Klecius, Telefone: 87651234\n",
+      "Nome: Kleciane, Telefone: 83616171\n"
+     ]
+    }
+   ],
+   "source": [
+    "for e in range(0, len(cadastrar.lista)):\n",
+    "    print(cadastrar[e])"
+   ]
   }
  ],
  "metadata": {
