Update estudo classes

--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "id": "94a0f9b6",
    "metadata": {},
    "outputs": [],
@@ -669,6 +669,11 @@
     "    def __init__(self, nome: str, telefone: int) -> None:\n",
     "        self._nome = nome\n",
     "        self._telefone = telefone\n",
+    "        self._lista_dos_contatos = []\n",
+    "    \n",
+    "    def pessoa(self) -> list:\n",
+    "        self._lista_dos_contatos.extend([self._nome, self._telefone])\n",
+    "        return self._lista_dos_contatos\n",
     "    \n",
     "    def __str__(self) -> str:\n",
     "        resultado = f\"Nome: {self._nome}, Telefone: {self._telefone}\"\n",
@@ -690,13 +695,15 @@
     "    def __init__(self) -> None:\n",
     "        self._lista_contatos = []\n",
     "    \n",
-    "    def incluir(self, valor: str) -> None:\n",
+    "    def incluir(self, valor: list) -> None:\n",
     "        self._lista_contatos.append(valor)\n",
     "    \n",
-    "    def alterar(self, valor: str, novo: str) -> None:\n",
-    "        if (valor in self._lista_contatos):\n",
-    "            indice = self._lista_contatos.index(valor)\n",
-    "            self._lista_contatos[indice] = novo\n",
+    "    def alterar(self, valor: str) -> None:\n",
+    "        for elemento in self._lista_contatos:\n",
+    "            if (valor in elemento):\n",
+    "                numero = int(input(\"Digite um Numero Novo: \"))\n",
+    "                indice = self._lista_contatos.index(valor)\n",
+    "                self._lista_contatos[indice] = novo\n",
     "\n",
     "    def excluir(self, indice: int) -> None:\n",
     "        if (indice > len(self._lista_contatos) - 1):\n",
@@ -718,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "id": "d7480309",
    "metadata": {},
    "outputs": [],
@@ -732,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "id": "f8e129b1",
    "metadata": {},
    "outputs": [],
@@ -744,17 +751,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "id": "9b73cd30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coloque um indice de 0 a 2\n"
+     ]
+    }
+   ],
    "source": [
-    "cadastrar.excluir(2)"
+    "cadastrar.excluir(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
+   "id": "665e8d99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "velhor_contato = Contato(\"Guilherme\",81955123)\n",
+    "novo_contato = Contato(\"Guilherme\",  12345678)\n",
+    "\n",
+    "cadastrar.alterar(velhor_contato, novo_contato)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1199870c",
    "metadata": {},
    "outputs": [
@@ -772,6 +800,73 @@
     "for e in range(0, len(cadastrar.lista)):\n",
     "    print(cadastrar[e])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9b0816ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome = \"Gui\"\n",
+    "numero = 8519623\n",
+    "acumulador = \"\"\n",
+    "acumulador += f\"Nome {nome}, Numero: {numero}\"\n",
+    "lista = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9f0dffcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lista.append(acumulador)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "21780ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nome = \"Gui\"\n",
+    "if nome in lista:\n",
+    "    i = lista.index(nome)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "02fd1a42",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista = [[\"Guilherme\", 1212], [\"jão\", 1212]]\n",
+    "\n",
+    "\"Guilherme\" in lista[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6a64f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
