--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "94a0f9b6",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
     "        self._lista_dos_contatos = []\n",
     "    \n",
     "    def pessoa(self) -> list:\n",
-    "        self._lista_dos_contatos.extend([self._nome, self._telefone])\n",
+    "        self._lista_dos_contatos.extend(self._nome, self._telefone)\n",
     "        return self._lista_dos_contatos\n",
     "    \n",
     "    def __str__(self) -> str:\n",
@@ -699,11 +699,16 @@
     "        self._lista_contatos.append(valor)\n",
     "    \n",
     "    def alterar(self, valor: str) -> None:\n",
+    "        tem = False\n",
     "        for elemento in self._lista_contatos:\n",
     "            if (valor in elemento):\n",
+    "                tem = True\n",
     "                numero = int(input(\"Digite um Numero Novo: \"))\n",
     "                indice = self._lista_contatos.index(valor)\n",
-    "                self._lista_contatos[indice] = novo\n",
+    "                self._lista_contatos[indice][1] = numero\n",
+    "        if not tem: ## se der true não tem esse valor| se der False, quer disser que tem\n",
+    "            print(f\"o Nome: {valor} não existe nos nossos contatos!\")\n",
+    "\n",
     "\n",
     "    def excluir(self, indice: int) -> None:\n",
     "        if (indice > len(self._lista_contatos) - 1):\n",
@@ -725,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "id": "d7480309",
    "metadata": {},
    "outputs": [],
@@ -739,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "id": "f8e129b1",
    "metadata": {},
    "outputs": [],
@@ -751,38 +756,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9b73cd30",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "665e8d99",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Coloque um indice de 0 a 2\n"
+     "ename": "TypeError",
+     "evalue": "argument of type 'Contato' is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[43]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mcadastrar\u001b[49m\u001b[43m.\u001b[49m\u001b[43malterar\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mIgor\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[40]\u001b[39m\u001b[32m, line 37\u001b[39m, in \u001b[36mRepositorioContatos.alterar\u001b[39m\u001b[34m(self, valor)\u001b[39m\n\u001b[32m     35\u001b[39m tem = \u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[32m     36\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m elemento \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m._lista_contatos:\n\u001b[32m---> \u001b[39m\u001b[32m37\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m (\u001b[43mvalor\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01min\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43melemento\u001b[49m):\n\u001b[32m     38\u001b[39m         tem = \u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[32m     39\u001b[39m         numero = \u001b[38;5;28mint\u001b[39m(\u001b[38;5;28minput\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mDigite um Numero Novo: \u001b[39m\u001b[33m\"\u001b[39m))\n",
+      "\u001b[31mTypeError\u001b[39m: argument of type 'Contato' is not iterable"
      ]
     }
    ],
    "source": [
-    "cadastrar.excluir(10)"
+    "cadastrar.alterar(\"Igor\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "665e8d99",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "velhor_contato = Contato(\"Guilherme\",81955123)\n",
-    "novo_contato = Contato(\"Guilherme\",  12345678)\n",
-    "\n",
-    "cadastrar.alterar(velhor_contato, novo_contato)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "1199870c",
    "metadata": {},
    "outputs": [
@@ -792,6 +797,7 @@
      "text": [
       "Nome: Guilherme, Telefone: 81955123\n",
       "Nome: Klecius, Telefone: 87651234\n",
+      "Nome: Franciene, Telefone: 81261251\n",
       "Nome: Kleciane, Telefone: 83616171\n"
      ]
     }
@@ -839,34 +845,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "id": "02fd1a42",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "lista = [[\"Guilherme\", 1212], [\"jão\", 1212]]\n",
-    "\n",
-    "\"Guilherme\" in lista[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cf6a64f7",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lista = [[\"Guilherme\", 20], [\"Antonio\", 64]]\n",
+    "lista3 = []\n",
+    "nome = \"Gui\"\n",
+    "idade = 17"
+   ]
   }
  ],
  "metadata": {
