--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -855,6 +855,151 @@
     "nome = \"Gui\"\n",
     "idade = 17"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "692c0164",
+   "metadata": {},
+   "source": [
+    "- Exercicio Dia 1 - Classes Simples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "347d1fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nome: Guilherme, idade: 21\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Pessoa:\n",
+    "    def __init__(self, nome: str, idade: int) -> None:\n",
+    "        self.nome = nome \n",
+    "        self.idade = idade\n",
+    "    def fazer_aniversario(self) -> None:\n",
+    "        self.idade += 1\n",
+    "    \n",
+    "    def __str__(self) -> str:\n",
+    "        acumulador = f\"Nome: {self.nome}, idade: {self.idade}\"\n",
+    "        return acumulador\n",
+    "    \n",
+    "gente = Pessoa(\"Guilherme\", 20)\n",
+    "\n",
+    "gente.fazer_aniversario()\n",
+    "\n",
+    "print(gente)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cc99510",
+   "metadata": {},
+   "source": [
+    "- Exercicio dia 2 - Encapsulamento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "4beafcb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "270.25"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Conta:\n",
+    "    def __init__(self, saldo: float) -> None:\n",
+    "        self._saldo = saldo\n",
+    "    \n",
+    "    def depositar(self, valor: float) -> None:\n",
+    "        if (valor < 0 or valor == 0):\n",
+    "            print(\"Coloque valores positivos, ou maior que zero!\")\n",
+    "        else:\n",
+    "            self._saldo += valor\n",
+    "    \n",
+    "    def sacar(self, valor: float) -> None:\n",
+    "        if (valor > self._saldo or valor < 0):\n",
+    "            print(\"Saldo insuficiente!\")\n",
+    "        else:\n",
+    "            self._saldo -= valor\n",
+    "    \n",
+    "    @property\n",
+    "    def saldo(self) -> float:\n",
+    "        return self._saldo\n",
+    "\n",
+    "cidadao = Conta(50.25)\n",
+    "cidadao.depositar(250)\n",
+    "cidadao.sacar(30)\n",
+    "cidadao.saldo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c7feda",
+   "metadata": {},
+   "source": [
+    "- Exercicio dia 3 - Classe com Regra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "171b2e72",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Produto:\n",
+    "    def __init__(self, nome: str, preço: float) -> None:\n",
+    "        self.nome = nome\n",
+    "        self.preço = preço\n",
+    "    \n",
+    "    def aplicar_desconto(self, porcentual: float) -> bool|float:\n",
+    "        valor_desconto = self.preço * (porcentual / 100)\n",
+    "        preço_final = self.preço - valor_desconto\n",
+    "        if (porcentual < 0 or preço_final < 0):\n",
+    "            return False\n",
+    "        else:\n",
+    "            return preço_final\n",
+    "\n",
+    "mause = Produto(\"Mause Gamer\", 9.99)\n",
+    "\n",
+    "mause.aplicar_desconto(200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae41bf8b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
