--- a/estudo/estudo-classes.ipynb
+++ b/estudo/estudo-classes.ipynb
@@ -994,9 +994,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c627ff5d",
+   "metadata": {},
+   "source": [
+    "- Exercicio Dia 4 - Herança\n",
+    "- Problema:\n",
+    "#### Classe Veiculo:\n",
+    "\n",
+    "- marca\n",
+    "\n",
+    "- velocidade\n",
+    "\n",
+    "- método acelerar\n",
+    "\n",
+    "#### Classes filhas:\n",
+    "\n",
+    "- Carro acelera +20\n",
+    "\n",
+    "- Moto acelera +30\n",
+    "\n",
+    "- 👉 Foco: reaproveitar código"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae41bf8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140\n",
+      "270\n"
+     ]
+    }
+   ],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "\n",
+    "# classe Pai\n",
+    "class Veiculo(ABC):\n",
+    "    def __init__(self, marca: str, velociodade:int) -> None:\n",
+    "        self.marca = marca\n",
+    "        self.velocidade = velociodade\n",
+    "    \n",
+    "    @abstractmethod\n",
+    "    def acelerar(self) -> None:\n",
+    "        pass\n",
+    "\n",
+    "#classe filhas\n",
+    "class Carro(Veiculo):\n",
+    "    def acelerar(self) -> None:\n",
+    "        self.velocidade += 20\n",
+    "        return self.velocidade\n",
+    "\n",
+    "#classe filhas\n",
+    "class Moto(Veiculo):\n",
+    "    def acelerar(self) -> None:\n",
+    "        self.velocidade += 30\n",
+    "        return self.velocidade\n",
+    "\n",
+    "\n",
+    "categoria_A = Moto(\"Pop\", 110)\n",
+    "categoria_B = Carro(\"Estrada\", 250)\n",
+    "\n",
+    "print(categoria_A.acelerar())\n",
+    "print(categoria_B.acelerar())"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ae41bf8b",
+   "id": "1ffcba14",
    "metadata": {},
    "outputs": [],
    "source": []
